ext/gl/gstglimagesink.h
@@ -102,7 +102,8 @@ struct _GstGLImageSink
     GstGLSyncMeta *stored_sync_meta;
     GLuint redisplay_texture;
 
-    gboolean caps_change;
+    /* protected with drawing_lock */
+    gboolean window_resized;
     guint window_width;
     guint window_height;
 
